--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, BlahGame!</string>
-    <string name="app_name">BlahBlah</string>
+    <string name="app_name">Comic Creator</string>
     <string name="add">Add</string>
-    <string name="remove">Remove</string>
-    <string name="rotate">Rotate</string>
-    <string name="zoom">Zoom</string>
     <string name="scale">Scale</string>
+    <string name="clear">Clear</string>
+    <string name="save">Save</string>
+    <string name="load">Load</string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
+    <string name="zoom">Zoom</string>
+    <string name="remove">Remove</string>
+    <string name="mode_hand">Manipulate mode</string>
+    <string name="mode_pencil">Draw mode</string>
+    <string name="mode_text">Type mode</string>
+    <string name="toback">Send to back</string>
+    <string name="tofront">Bring to front</string>
+    <string name="pen_color">Pen color</string>
+    <string name="pen_width">Pen width</string>
 </resources>
