settings fix, share option

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="about">About</string>
     <string name="zoom">Zoom</string>
     <string name="remove">Remove</string>
+    <string name="share">Share</string>
     <string name="mode_hand">Manipulate mode</string>
     <string name="mode_pencil">Free draw mode</string>
     <string name="mode_text">Type mode</string>
