--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, BlahGame!</string>
-    <string name="app_name">Comic Creator</string>
+    <string name="app_name">Rage Maker</string>
     <string name="add">Add Image</string>
     <string name="add_pack">Add from image pack</string>
     <string name="add_other">Add from other source</string>
