fixed rotate bug, new mode select, + small fixes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="mode_pencil">Free draw mode</string>
     <string name="mode_text">Type mode</string>
     <string name="mode_line">Line mode</string>
+    <string name="mode_select_title">Select interaction mode</string>
     <string name="toback">Send to back</string>
     <string name="tofront">Bring to front</string>
     <string name="pen_color">Pen color</string>
@@ -33,4 +34,5 @@
     <string name="settings_bg_color_confirm">Use Color</string>
     <string name="settings_default_color_confirm">Use Previous</string>
     <string name="settings_bg_color_dialog">Select Color</string>
+    
 </resources>
