bugfixes + exit menu option

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="add_other">Add from other source</string>
     <string name="scale">Scale</string>
     <string name="clear">Clear</string>
+    <string name="exit">Exit</string>
     <string name="save">Save</string>
     <string name="load">Load</string>
     <string name="settings">Settings</string>
