--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="cancel">Cancel</string>
     <string name="later">Later</string>
     <string name="never">Never</string>
+    <string name="object_menu">Object Menu</string>
     
 </resources>
