--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -73,5 +73,6 @@
     <string name="cancel">Anuluj</string>
     <string name="later">Później</string>
     <string name="never">Nigdy</string>
+    <string name="object_menu">Menu obiektów</string>
     
 </resources>
