--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,5 +81,6 @@
     <string name="saveformat">Save format</string>
     <string name="black">Black</string>
     <string name="white">White</string>
+    <string name="lock">Lock/Unlock</string>
     
 </resources>
