drafts manager, edit text object color/text

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,5 +82,7 @@
     <string name="black">Black</string>
     <string name="white">White</string>
     <string name="lock">Lock/Unlock</string>
+    <string name="drafts">Drafts</string>
+    <string name="draft_options">Draft options</string>
     
 </resources>
